# kalshi-makers-takers-replication

./: .env.example  .gitignore  Claude.md  LICENSE  README.md  config.yaml  kalshi-replication-spec.md  pyproject.toml
data/: category_map_polymarket_kalshi.yaml  fees.yaml
docs/: analysis_plan.md  known_gaps.md
reports/step_zero/: findings.json  findings.md
src/kalshi_mt/: cli.py  util.py
src/kalshi_mt/api/: http.py  kalshi.py
src/kalshi_mt/control/: polymarket.py
src/kalshi_mt/fees/: returns.py  ribbon.py  schedule.py
src/kalshi_mt/fetch/: pass1.py  pass2.py
src/kalshi_mt/r1/: field_population.py  filters.py  panel.py  reconcile.py  regression.py  reproduction.py
src/kalshi_mt/r2/: decomposition.py  horizon.py  maker_margin.py  regression.py  report.py  verdicts.py
src/kalshi_mt/r3/: firewall.py
src/kalshi_mt/report/: escalation.py  final.py
src/kalshi_mt/stepzero/: checks.py  report.py
src/kalshi_mt/store/: db.py  parquet.py
tests/: test_cli_phase9_10.py  test_cli_r2.py  test_control_polymarket.py  test_db.py  test_escalation.py  test_fees.py  test_field_population.py  test_filters.py  test_http.py  test_kalshi_client.py  test_panel.py  test_parquet.py  test_pass1.py  test_pass2.py  test_r2_decomposition.py  test_r2_horizon.py  test_r2_maker_margin.py  test_r2_regression.py  test_r2_report.py  test_r2_verdicts.py  test_r3_firewall.py  test_reconcile.py  test_regression.py  test_report_final.py  test_reproduction.py  test_returns.py  test_ribbon.py  test_scope.py  test_stepzero.py
